--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="하루하루 자신의 감정과 일과를 적어보세요." />
+
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
+    <meta property="og:site_name" content="오늘의 감정 일기장" />
+    <meta property="og:description" content="하루하루 자신의 감정과 일과를 적어보세요." />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
